[gd_scene load_steps=3 format=3 uid="uid://ruoynfwfh34"]

[ext_resource type="Script" path="res://prog_88a.gd" id="1_ddy5h"]

[sub_resource type="LabelSettings" id="LabelSettings_auue7"]
font_size = 24

[node name="prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddy5h")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 53.0
offset_right = 387.0
offset_bottom = 168.0
text = "Enter num 1:"
label_settings = SubResource("LabelSettings_auue7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 194.0
offset_right = 390.0
offset_bottom = 309.0
text = "Enter num 2:"
label_settings = SubResource("LabelSettings_auue7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 28.0
offset_right = 805.0
offset_bottom = 148.0

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 189.0
offset_right = 810.0
offset_bottom = 309.0

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 330.0
offset_right = 805.0
offset_bottom = 635.0

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 885.0
offset_top = 28.0
offset_right = 1128.0
offset_bottom = 136.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 882.0
offset_top = 328.0
offset_right = 1125.0
offset_bottom = 436.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 885.0
offset_top = 523.0
offset_right = 1128.0
offset_bottom = 631.0
text = "Exit"

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
